--- a/style/font.css
+++ b/style/font.css
@@ -19,6 +19,19 @@
     font-family: 'dishcek';
     src: url('../fonts/Dishcek.otf') format('opentype');
 }
+@font-face {
+    font-family: 'BeachSunny';
+    src: url('../fonts/BeachSunny.otf') format('opentype');
+}
+@font-face {
+    font-family: 'MidnightSerenity';
+    src: url('../fonts/MidnightSerenity.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Curetro';
+    src: url('../fonts/Curetro.otf') format('opentype');
+}
+
 
 /*Utilisation des polices de caractère*/
 h1, p.catTitle {
@@ -31,4 +44,12 @@ body, p.catsubTitle {
 
 .flex-itemCat{
     font-family: 'roboto-thin'; 
+}
+
+.subTitle {
+    font-family: 'roboto-black';
+}
+
+.button1, #button{
+    font-family:'curetro';
 }
