--- a/style/general.css
+++ b/style/general.css
@@ -1,18 +1,34 @@
 /*********************************/
 /* Gestion des balises classiques*/
 /*********************************/
-body{   
-    background: linear-gradient(0deg, rgba(247, 205, 67, 0.943) 0%, rgba(253, 87, 36, 0.849) 100%);
-    background-size: 100%;
-    background-position: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
+
+body{
+    overflow-x: hidden;
+} 
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../src/img/test1.png');
+    background-size:cover;
+    background-position: center;
+    filter: blur(4px); /* Ajustez la valeur de flou selon vos préférences */
+    z-index: -1; /* Assurez-vous que cet élément est derrière le contenu */
 }
+
 .mainTitle{
     font-size: 50px;
     text-align: center;
     text-decoration: underline;
 }
+.container {
+    /* Styles pour le contenu dans la page */
+    text-align: center;
+    color: rgb(6, 6, 92);
+  }
 
 
 /**************/
@@ -21,9 +37,9 @@ body{
 article{
     margin-top: 12px;
     padding-left: 15px;
-    background-color: rgba(230, 227, 74, 0.568);
+    background-color: rgba(49, 131, 255, 0.568);
     border-radius: 20px;
-    box-shadow: 3px 3px rgba(228, 152, 10, 0.692);
+    box-shadow: 3px 3px rgba(12, 96, 221, 0.63);
     
 }
 .subTitle{
@@ -32,22 +48,25 @@ article{
 .button1{
     width: 120px;
     height: 35px;
-    background-color: rgb(196,75,75);
+    background-color: rgba(49, 131, 255, 0.568);;
     border-radius: 20px;
-    color:white;
-    box-shadow:3px 3px pink ;
+    color:rgb(6, 6, 92);
+    box-shadow:3px 3px rgba(12, 96, 221, 0.63);
     font-size: 95%;
     border:none; 
     min-width: 110px;
-    min-height: 20px;    
+    min-height: 20px;
+
 }
 .button1:hover{
-    background-color: rgb(209, 93, 93);
+    background-color: rgba(7, 51, 116, 0.63);
+    box-shadow:3px 3px rgba(4, 23, 51, 0.63);
 }
 .buttonwrapper{
     width: 100%;
     padding-left: 45%;
     margin-top: 10px;
+    display: flex; 
 }
 .a-definition{
     margin-left: 17%;
@@ -65,8 +84,6 @@ article{
     padding-left: 21%;
     padding-right: 23%;
 }
-s
-
 #panelPrincipes{
     margin :0 35px 0 0;
 }
@@ -77,6 +94,14 @@ s
 /*****************/
 /* syracuse.html */
 /*****************/
+
+.flex-container{
+    background-color: rgba(49, 131, 255, 0.568);;
+    border-radius: 20px;
+    color:rgb(6, 6, 92);
+    padding: 1% 1% 1% 1%;
+}
+
 body.syracuseBody{
     text-align: center;
     margin-left: 0px;
@@ -104,15 +129,16 @@ border-radius: 25px;
     width: 95px;
     height: 30px;
     margin-top: 2px;
-    background-color: rgb(196,75,75);
+    background-color: rgba(49, 131, 255, 0.568);;
     border-radius: 20px;
-    color:white;
-    box-shadow:2px 2px pink;
+    color:rgb(6, 6, 92);
+    box-shadow:3px 3px rgba(12, 96, 221, 0.63);
     font-size: 100%;
     border:none;
 }
 #button:hover{
-    background-color:rgb(209, 93, 93);
+    background-color: rgba(7, 51, 116, 0.63);
+    box-shadow:3px 3px rgba(4, 23, 51, 0.63);
 }
 #nbr{
     border:none;
@@ -122,7 +148,10 @@ border-radius: 25px;
     background-color: aliceblue;
 }
 
-
+.flex-itemCat{
+    color:white;
+    text-decoration: none;
+}
 
 /************/
 /* cat.html */
